# notebooklm-mcp

./: pyproject.toml
src/notebooklm_mcp/: cli.py  client.py  server.py
tests/: test_cli.py
