[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-mcp"
version = "2.0.11"
description = "FastMCP v2 server for NotebookLM automation with modern async support"
readme = "README.md"
license = "MIT"
authors = [
    {name = "NotebookLM MCP Team", email = "support@notebooklm-mcp.dev"}
]
maintainers = [
    {name = "NotebookLM MCP Team", email = "support@notebooklm-mcp.dev"}
]
keywords = ["fastmcp", "mcp", "notebooklm", "automation", "ai", "llm", "fastmcp-v2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    # Core FastMCP v2 framework
    "fastmcp>=2.0.0",
    
    # Web automation
    "selenium>=4.22.0",
    "undetected-chromedriver>=3.5.4",
    
    # Async support
    "anyio>=4.4.0",
    "trio>=0.26.0", 
    "async-timeout>=4.0.3",
    
    # Data validation and CLI
    "pydantic>=2.8.2",
    "click>=8.0.0",
    "rich>=13.0.0",
    
    # Logging and utilities
    "loguru>=0.7.2",
    "typing-extensions>=4.0.0",
    "psutil>=5.9.0",
    
    # TOML parsing (for Python < 3.11 compatibility)
    "tomli>=2.0.0; python_version<'3.11'",
]

# Modern dependency groups (PEP 735) - UV native support
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "notebooklm-mcp",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.0.0",
]
lint = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools>=65.0",
    "wheel",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.23.0",
]

# UV Configuration
[tool.uv]
# Development workflow configuration
dev-dependencies = []  # Use dependency-groups instead

# Package configuration
package = true

# Constraint dependencies for consistent resolution
constraint-dependencies = [
    "selenium>=4.20.0,<5.0",
    "pydantic>=2.8.0,<3.0"
]

# Build constraints
build-constraint-dependencies = [
    "setuptools>=65.0",
    "wheel"
]

# Dependency conflict resolution
conflicts = []

# Sources configuration for alternative package locations
[tool.uv.sources]
notebooklm-mcp = { workspace = true }
# Example: Use development version of fastmcp if needed
# fastmcp = { git = "https://github.com/jlowin/fastmcp", branch = "main" }

[project.urls]
Homepage = "https://github.com/notebooklm-mcp/notebooklm-mcp"
Documentation = "https://notebooklm-mcp.readthedocs.io"
Repository = "https://github.com/notebooklm-mcp/notebooklm-mcp"
Issues = "https://github.com/notebooklm-mcp/notebooklm-mcp/issues"
Changelog = "https://github.com/notebooklm-mcp/notebooklm-mcp/blob/main/CHANGELOG.md"

[project.scripts]
notebooklm-mcp = "notebooklm_mcp.cli:main"
notebooklm-server = "notebooklm_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["notebooklm_mcp*"]

[tool.setuptools.package-data]
"notebooklm_mcp" = ["py.typed", "*.json", "*.yaml", "*.yml"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["notebooklm_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "undetected_chromedriver.*",
    "mcp.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:napari",
    "-p", "no:napari-plugin-engine",
    "-p", "no:npe2",
    "-p", "no:cov",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "browser: marks tests that require a browser",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "src/notebooklm_mcp/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
